# andet

./: PINN.ipynb
data_reader/: NAB_read.ipynb  (+1 more)
their_git/fvt-ml-main/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  elastic_vars.sh  info_doc.txt  pyproject.toml  run_elastic.sh
their_git/fvt-ml-main/jobs/: run-cpu-spike-detection.sh.sample
their_git/fvt-ml-main/scripts/: prepare_commit_msg.py
their_git/fvt-ml-main/src/fvt_ml/: __init__.py
their_git/fvt-ml-main/src/fvt_ml/cpu_spike_detection/: main.py
their_git/fvt-ml-main/src/fvt_ml/cpu_spike_detection/std_dev/: app.py  cli.py  config.py  model.py  postprocessor.py  preprocessor.py  stats.py
their_git/fvt-ml-main/src/fvt_ml/cpu_spike_detection/std_dev/infra/predictions_repo/: elastic_search_predictions_repo.py  mock_predictions_repo.py
their_git/fvt-ml-main/src/fvt_ml/cpu_spike_detection/std_dev/infra/raw_data_repo/: elastic_search_raw_data_repo.py  mock_raw_data_repo.py  raw_data_repo.py
their_git/fvt-ml-main/src/fvt_ml/ram_abnormal_detection/: main.py
their_git/fvt-ml-main/src/fvt_ml/ram_abnormal_detection/std_dev/: app.py  cli.py  config.py  model.py  preprocessor.py  stats.py
their_git/fvt-ml-main/src/fvt_ml/ram_abnormal_detection/std_dev/infra/predictions_repo/: elastic_search_predictions_repo.py  mock_predictions_repo.py  predictions_repo.py
their_git/fvt-ml-main/src/fvt_ml_resources/cpu_spike_detection_stdev_model/: aegis-it-research-server1.json
their_git/fvt-ml-main/src/fvt_ml_resources/ram_abnormal_detection_stdev_model/: aegis-it-research-server1.json
(+8 files in other folders)
