[tool.poetry]
name = "fvt-ml"
version = "0.1.0"
description = ""
authors = ["Panos Giannakoulias <panosgia87@hotmail.com>"]
packages = [
    { include = "fvt_ml", from = "src" },
    { include = "fvt_ml_resources", from = "src" },
]

[tool.poetry.scripts]
cpu-spike-detection = "fvt_ml.cpu_spike_detection.main:app"
ram-abnormal-detection = "fvt_ml.ram_abnormal_detection.main:app"


[tool.poetry.dependencies]
PyYAML = "^6.0"
elasticsearch = "7.13.4"
numpy = "^1.22.4"
pandas = "^1.4.2"
pydantic = "^1.9.0"
python = "^3.8"
requests = "^2.27.1"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
line_length = 100
profile = "black"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
files = ["src"]
follow_imports = "silent"
python_version = 3.8
warn_redundant_casts = true
warn_unused_ignores = true
